Freedom Sanbox Ant Deploy/src/objects/Wellness_Card_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Explanation</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Bank_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank List</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipName>Wellness_card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Option_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer Question Master</label>
        <referenceTo>Question_Option_List__c</referenceTo>
        <relationshipName>Wellness_card_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wellness_Score_Card__c</fullName>
        <label>Wellness Score Card</label>
        <referenceTo>Wellness_Score_Card__c</referenceTo>
        <relationshipName>Wellness_card_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wellness Card Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wellness card Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wellness Card Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>